Fix scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
   color: var(--color-text);
 }
 
